# vshift

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: release.yml
config/: vshift.example.yaml  vshift.yaml
config/profiles/: 1080p-10bit-h265.yaml  4k-10bit-h265.yaml
docs/: ARCHITECTURE.md
helm/vshift/: Chart.yaml  values.yaml
helm/vshift/config/: vshift.yaml
helm/vshift/config/profiles/: 1080p-8bit-h265.yaml  4k-8bit-sdr-h265.yaml
helm/vshift/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  pvc.yaml  server-deployment.yaml  server-rbac.yaml  server-service.yaml  worker-deployment.yaml  worker-serviceaccount.yaml
src/vshift/: __init__.py  exception.py
src/vshift/application/common/: application_context.py  logging_config.py  settings.py
src/vshift/application/server/: application_context.py  main.py  settings.py
src/vshift/application/worker/: application_context.py  main.py  settings.py
src/vshift/domain/config/: __init__.py  enums.py  match_rule.py  profile_matcher.py  vshift_config.py
src/vshift/domain/file/: __init__.py  probed_input.py
src/vshift/domain/job/: __init__.py  job_state.py  job_state_machine.py  job_summary.py  transcode_job.py
src/vshift/domain/transcoding/: __init__.py  transcode_result.py
src/vshift/domain/transcoding_profile/: __init__.py  enums.py  vshift_profile.py
src/vshift/domain/worker/: __init__.py  worker_capabilities.py  worker_hardware_info.py  worker_info.py
src/vshift/ports/: __init__.py  config_repository.py  file_scanner.py  job_repository.py  media_prober.py  metrics_collector.py  processed_file_store.py  profile_repository.py  task_queue.py  transcoder.py  worker_pod_launcher.py  worker_registry.py
tests/: test_api.py  test_ffmpeg.py  test_job_state_machine.py  test_kubernetes.py  test_redis_stores.py  test_server_use_cases.py  test_transcoding_profile.py  test_video_stream_info.py  test_vshift_config.py  test_worker_use_cases.py  test_yaml_config_loader.py
tests/fixtures/config/: invalid_ref.yaml  invalid_ref_keys.yaml  vshift.yaml
tests/fixtures/handbrake/: hq_4k_hdr_10bit.json
(+59 files in other folders)
