[project]
name = "vshift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.2",
    "redis>=8.0.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.28.0",
    "prek>=0.4",
    "pyright>=1.1.410",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
    "ruff>=0.15.15",
]

[project.scripts]
vshift = "vshift:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
